--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <handlebars.version>4.0.6</handlebars.version>
     <jtwig-spring.version>3.1.1</jtwig-spring.version>
     <spring-jade4j.version>1.2.5</spring-jade4j.version>
+    <jinjava.version>2.1.15</jinjava.version>
   </properties>
 
   <parent>
@@ -213,6 +214,24 @@
       <artifactId>jtwig-spring</artifactId>
       <version>${jtwig-spring.version}</version>
     </dependency>
+
+
+  <dependency>
+    <groupId>com.hubspot.jinjava</groupId>
+    <artifactId>jinjava</artifactId>
+    <version>${jinjava.version}</version>
+    <exclusions>
+    	<exclusion>
+    		<groupId>de.odysseus.juel</groupId>
+    		<artifactId>juel-api</artifactId>
+    	</exclusion>
+    	<exclusion>
+    		<groupId>de.odysseus.juel</groupId>
+    		<artifactId>juel-spi</artifactId>
+    	</exclusion>
+    </exclusions>
+  </dependency>
+
 
     <!-- Test -->
 
